# intelligence-terminal-

./: .env.example  FASE_2_IMPLEMENTATION.md  IMPLEMENTACION_FASE2.md  INDEX.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.ps1  README.md  SETUP.md  START_HERE.md  docker-compose.yml  index.html  parasaray.html  parati.html
.github/workflows/: test.yml
backend/: Dockerfile  README.md  debug_latest.py  debug_symbols.py  pyproject.toml  requirements.txt  run_server.bat  run_tests.bat  setup.bat  setup.py  test_api.bat  test_api.py  test_endpoints.py
backend/app/: __init__.py  main.py  tasks.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: __init__.py  correlation.py  intelligence.py  macro.py  market.py  news.py  smc.py  volatility.py  ws.py
backend/app/core/: celery_app.py  config.py  logger.py  redis_client.py
backend/app/db/: base.py  models.py  repository.py  session.py
backend/app/schemas/: market.py
backend/app/services/cache/: __init__.py  tick_store.py
backend/app/services/correlation/: calculator.py  engine.py  schemas.py
backend/app/services/gold_intelligence/: analyzer.py  engine.py  schemas.py
backend/app/services/macro/: engine.py  indicators.py  schemas.py
backend/app/services/market_data/: __init__.py  service.py
backend/app/services/market_data/providers/: __init__.py  base.py  mock.py  twelve_data.py
backend/app/services/news/: calendar.py  classifier.py  engine.py  schemas.py
backend/app/services/smc/: detector.py  engine.py  schemas.py
backend/app/services/volatility/: calculator.py  engine.py  schemas.py
backend/app/services/websocket/: manager.py
database/: init.sql
docker/: nginx.conf  prometheus.yml
docs/: AUDITORIA_FASE2_COMPLETADO.md  README.md
docs/architecture/: ARCHITECTURE.md  PROJECT_STRUCTURE.md  ROADMAP.md
docs/reports/: AUDITORIA_READINESS_FASE2.md  AUDIT_REPORT.md  COMPLETION_REPORT.md  FINAL_SUMMARY.txt  PHASE_1_SUMMARY.md
frontend/: .env.example  README.md  next.config.js  package-lock.json  package.json  run_frontend.bat  tailwind.config.js  tsconfig.json
frontend/app/: dashboard.tsx  globals.css  layout.tsx  page.tsx
frontend/public/: index.html
frontend/public/tools/: herramienta_api.html  herramienta_pro.html
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_correlation.py  test_intelligence.py  test_macro.py  test_main.py  test_market.py  test_news.py  test_smc.py  test_volatility.py
