[tool.poetry]
name = "jardin-secreto"
version = "0.1.0"
description = "Institutional Gold Trading Terminal - Quantitative Analysis Platform"
authors = ["Quantitative Trading Team <team@jardinsecreto.local>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
celery = "^5.3.4"
redis = "^5.0.1"
aioredis = "^2.0.1"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
requests = "^2.31.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^41.0.7"
PyJWT = "^2.8.1"
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.7"
openai = "^1.3.8"
anthropic = "^0.7.8"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.isort]
profile = "black"
line_length = 100
