[tool.poetry]
name = "intelligence-terminal"
version = "0.1.0"
description = "Institutional Gold Trading Terminal - Quantitative Analysis Platform"
authors = ["Quantitative Trading Team <team@intelligence-terminal.local>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
scipy = "^1.14.0"
celery = "^5.4.0"
redis = "^5.2.0"
aioredis = "^2.0.1"
httpx = "^0.27.0"
aiohttp = "^3.10.0"
requests = "^2.32.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^43.0.0"
PyJWT = "^2.9.0"
prometheus-client = "^0.21.0"
python-json-logger = "^2.0.7"
openai = "^1.54.0"
anthropic = "^0.40.0"
python-dotenv = "^1.0.0"
slowapi = "^0.1.9"
websockets = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=term-missing -v"

[tool.isort]
profile = "black"
line_length = 100
